2005-02-04  Tom Tromey  <tromey@redhat.com>

	* bytecode/signature.cc (parse_ref_type): End inner loop when ';'
	seen.

2005-02-04  Tom Tromey  <tromey@redhat.com>

	* bytecode/locals.cc (request): Minor rearrangement.
	(remove): Pop 'scope'.
	* bytecode/generate.cc (visit_variable_stmt): Removed old
	comment.

2005-01-30  Tom Tromey  <tromey@redhat.com>

	* aot/mangle.cc (mangler): Special case array types.

	* aot/aotclass.cc (lay_out_vtable): Skip constructors and private
	methods.

	* model/package.hh (model_package::get_simple_name): Handle
	unnamed package.
	* aot/mangle.cc (update): Handle empty package name.
	(update): Emit count before class name.

	* aot/aotclass.cc (lay_out_vtable): Check 'super' before copying
	vtable.

2005-01-29  Tom Tromey  <tromey@redhat.com>

	* aot/aotfactory.cc: Added instantiations.

	* aot/aotclass.hh (aot_class::get): New method.

	* aot/mangle.cc: New file.
	* aot/mangle.hh: New file.
	* aot/aotfactory.cc: New file.
	* aot/aotfactory.hh: New file.
	* aot/aotclass.cc: New file.
	* aot/aotclass.hh: New file.
	* Makefile.in: Rebuilt.
	* Makefile.am (aot_sources): New macro.
	(libgcjx_la_SOURCES): Use it.

2005-01-25  Tom Tromey  <tromey@redhat.com>

	* source/parse.cc (any_method_declarator): Update method return
	type if brackets follow method name.

2005-01-25  Tom Tromey  <tromey@redhat.com>

	* bytecode/classwriter.cc (check_type): New method.
	(write): Use it.
	* bytecode/classwriter.hh (class_writer::check_type): Declare.
	* bytecode/generate.cc (visit_for_enhanced): Use check_type.
	(visit_cast): Likewise.
	(visit_class_ref): Likewise.
	(visit_instanceof): Likewise.
	(visit_new_array): Likewise.
	(visit_array_initializer): Likewise.

2005-01-25  Tom Tromey  <tromey@redhat.com>

	* defassign.cc (variable_state::check_loop): New method.
	(definite_assignment_visitor::visit_for_enhanced): Use it.
	(definite_assignment_visitor::visit_for): Likewise.
	(definite_assignment_visitor::visit_while): Likewise.